# CrewAI-Basics

./: .gitignore  .gitmodules  01_blog_post_crew.ipynb  02_Crear_Proyecto_de_CrewAI_APUNTES.md  README.md  requirements.txt
Proyecto-Multiagentes-para-MachineLearning/: Comandos.md  requirements.txt
proyecto_b_agentes_con_tools_y_observabilidad/: Comandos.md  README.md  pyproject.toml
proyecto_b_agentes_con_tools_y_observabilidad/Results/: guia_practica_desarrollo_aplicaciones_ia_claude_code_2025.md
proyecto_b_agentes_con_tools_y_observabilidad/src/proyecto_b_agentes_con_tools_y_observabilidad/: crew.py  guia_claude_code_desarrollo_ia_2025.md  main.py
proyecto_b_agentes_con_tools_y_observabilidad/src/proyecto_b_agentes_con_tools_y_observabilidad/config/: agents.yaml  tasks.yaml
