[project]
name = "proyecto_b_agentes_con_tools_y_observabilidad"
version = "0.1.0"
description = "proyecto_b_agentes_con_tools_y_observabilidad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "agentops==0.4.4",
    "python-dotenv>=1.0.0",
]

[project.scripts]
proyecto_b_agentes_con_tools_y_observabilidad = "proyecto_b_agentes_con_tools_y_observabilidad.main:run"
run_crew = "proyecto_b_agentes_con_tools_y_observabilidad.main:run"
train = "proyecto_b_agentes_con_tools_y_observabilidad.main:train"
replay = "proyecto_b_agentes_con_tools_y_observabilidad.main:replay"
test = "proyecto_b_agentes_con_tools_y_observabilidad.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proyecto_b_agentes_con_tools_y_observabilidad"]

[tool.crewai]
type = "crew"
